tidied up code a bit

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
 <section class="main-body">
 
 
-<div id="new-link">
+<!-- <div id="new-link">
   <form action="/links" method="post">
     Url: <input type="text" name="url">
     Title: <input type="text" name="title">
@@ -22,7 +22,7 @@
     Tags: <input type="text" name="tags">
     <input type="submit" value="Add link">
   </form>
-</div>
+</div> -->
 
 <ul id="categories">
 	<% @tags.each do |tag| %>
