--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -25,7 +25,7 @@ body{
 
 h1 {
 	text-align: center;
-	border-bottom: solid 1px;
+	border-bottom: solid orange 1px;
 	text-align: center;
 	width: 60%;
 	margin-left: auto;
@@ -47,6 +47,7 @@ h3 {
 }
 
 iframe {
+	max-width: 50%;
 	/*border: solid orange 1px;*/
 }
 
@@ -57,7 +58,12 @@ p {
 	margin-left: auto;
 	margin-right: auto;
 	padding-bottom: 2em;
-	border-bottom: solid 1px;
+	border-bottom: solid orange 1px;
+}
+
+ul li a {
+	display: block;
+	margin-left: -8em;
 }
 
 
