--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -23,6 +23,11 @@ body{
 	margin: 0 auto;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 h1 {
 	text-align: center;
 	border-bottom: solid orange 1px;
@@ -61,11 +66,9 @@ p {
 	border-bottom: solid orange 1px;
 }
 
-ul li a {
-	display: block;
-	margin-left: -8em;
+.hidden {
+       display:none;
 }
-
 
 #new-link {
 	text-align: center;
