user sign up tests passed

--- a/views/users/new.erb
+++ b/views/users/new.erb
@@ -1,8 +1,8 @@
 <h3> Please sign up </h3>
 
 <form action="/users" method="post">
-	Username: 						<input name="username" type="text" value="<%= @user.username %>">
-	Email: 								<input name="email" type="text" value="<%= @user.email %>">
+	Username: 						<input name="username" type="text">
+	Email: 								<input name="email" type="text">
 	Password: 						<input name="password" type="password">
 	Password Confirmation:<input name="password_confirmation" type="password">
 												<input type="submit" value="Sign Up">
